--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,6 @@
 # Backend API URL
 # For local development, use: http://localhost:8000/api
 # For production, use your Render backend URL: https://univr-chatbot-backend-1.onrender.com/api
-NEXT_PUBLIC_API_URL=https://univr-chatbot-backend-1.onrender.com/api
+# NEXT_PUBLIC_API_URL=https://univr-chatbot-backend-1.onrender.com/api
+# For production, use your Render backend URL: https://univr-chatbot-backend-1.onrender.com/api
+NEXT_PUBLIC_API_URL=http://localhost:8000/api
